--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_share"
         android:orderInCategory="100"
-        android:title="@string/settings"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_action_share"
+        android:title="@string/shareMenu"
+        app:showAsAction="always" />
 </menu>
